Fix ipad white space at bottom

--- a/index.css
+++ b/index.css
@@ -19,9 +19,10 @@ h2 {
 
 body {
     display: grid;
-    grid-template-columns: 50% 50%;
-    grid-template-rows: 50% 50%;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     margin: 0;
+    height: 100vh;
 }
 
 section {
@@ -99,7 +100,7 @@ footer {
     body {
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: 33% 33% 33%;
+        grid-template-rows: 1fr 1fr 1fr;
         margin: 0;
     }
 
